@@ -9,49 +9,41 @@
 
 
 {% block content %}
-    
-<h1>{% trans "Sign In" %}</h1>
 
-{% if not user.is_authenticated %}
+<h1>{% trans "Sign In" %}</h1>
 
 {% if socialaccount.providers  %}
 <p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a 
-href="{{ signup_url }}">sign up</a> for a {{site_name}} account and sign in
+of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a> 
+for a {{site_name}} account and sign in
 below:{% endblocktrans %}</p>
 
 <div class="socialaccount_ballot">
 
-<ul class="socialaccount_providers">
-{% include "socialaccount/snippets/provider_list.html" %}
-</ul>
+  <ul class="socialaccount_providers">
+    {% include "socialaccount/snippets/provider_list.html" %}
+  </ul>
 
-<div class="login-or">{% trans 'or' %}</div>
+  <div class="login-or">{% trans 'or' %}</div>
 
 </div>
 
 {% include "socialaccount/snippets/login_extra.html" %}
 
 {% endif %}
-{% endif %}
 
-    <form class="login" method="POST" action="{% url 'account_login' %}">
-        {% csrf_token %}
-          {{ form|bootstrap }}
-            {% if redirect_field_value %}
-                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
-            <div class="form-actions">
-                <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
-                <a class="btn" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+<form class="login" method="POST" action="{% url 'account_login' %}">
+  {% csrf_token %}
+  {{ form|bootstrap }}
+  {% if redirect_field_value %}
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  {% endif %}
+  <div class="form-actions">
+    <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
+    <a class="btn" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
 
-            </div>
-    </form>
-    
-{% if user.is_authenticated %}
-{% include "account/snippets/already_logged_in.html" %}
-{% endif %}
-    
+  </div>
+</form>
 
 {% endblock %}
 
