@@ -8,28 +8,28 @@
 
 {% block content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-    
-    <form method="POST" action="" class="password_reset uniForm">
-        {% csrf_token %}
-        <fieldset class="inlineLabels">
-            {{ password_reset_form|as_uni_form }}
-             <div class = "buttonHolder">
-                 <input type="submit" value="{% trans "Reset My Password" %}" />
-            </div>
-        </fieldset>
-    </form>
-    
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+<h1>{% trans "Password Reset" %}</h1>
+{% if user.is_authenticated %}
+{% include "account/snippets/already_logged_in.html" %}
+{% endif %}
+
+<p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+
+<form method="POST" action="" class="password_reset uniForm">
+  {% csrf_token %}
+  <fieldset class="inlineLabels">
+    {{ password_reset_form|as_uni_form }}
+    <div class = "buttonHolder">
+      <input type="submit" value="{% trans "Reset My Password" %}" />
+    </div>
+  </fieldset>
+</form>
+
+<p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock %}
 
 {% block extra_body %}
-    <script>
-        $("#id_email").focus();
-    </script>
+<script>
+  $("#id_email").focus();
+</script>
 {% endblock %}
