@@ -7,27 +7,23 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Sign Up" %}</h1>
-    
-    {% if user.is_authenticated %}
-{% include "account/snippets/already_logged_in.html" %}
-    {% else %}
-    <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-        
-        <form class="signup uniForm" id="signup_form" method="post" action="{% url 'account_signup' %}">
-            {% csrf_token %}
-            <fieldset class="inlineLabels">
-                {{ form|as_uni_form }}
-                {% if redirect_field_value %}
-                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                {% endif %}
-                <div class="buttonHolder">
-                    <button class="primaryAction" type="submit">{% trans "Sign Up" %} &raquo;</button>
-                </div>
-            </fieldset>
-        </form>
-        
+<h1>{% trans "Sign Up" %}</h1>
+
+<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+
+<form class="signup uniForm" id="signup_form" method="post" action="{% url 'account_signup' %}">
+  {% csrf_token %}
+  <fieldset class="inlineLabels">
+    {{ form|as_uni_form }}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
+    <div class="buttonHolder">
+      <button class="primaryAction" type="submit">{% trans "Sign Up" %} &raquo;</button>
+    </div>
+  </fieldset>
+</form>
+
 {% endblock %}
 
 
