@@ -1,3 +1,8 @@
+2013-02-12  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* Both the login and signup view now immediately redirect to the
+	login redirect url in case the user was already authenticated.
+
 2013-02-11  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Added support for closing down signups in a pluggable fashion,
